# cs153

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
benchmarks/: README.md  case_studies.json  real_papers.json
docs/: demo_script.md  milestone.md
examples/: sample_model_card.txt  sample_paper.txt
outputs/: plan.json  plan.md  sample_audit.md
outputs/bench/real_papers_v1/: bench_summary.json  bench_summary.md
outputs/bench/real_papers_v1/dpo/: audit.md
outputs/bench/real_papers_v1/lora/: audit.md
outputs/bench/real_papers_v1/mamba/: audit.json
outputs/bench/real_papers_v1_noretrieval/dpo/: audit.json
outputs/bench/real_papers_v1_noretrieval/flash-attention/: audit.json  audit.md
outputs/bench/real_papers_v1_noretrieval/lora/: audit.json
outputs/bench/real_papers_v1_noretrieval/mamba/: audit.md
outputs/bench/real_papers_v1_noretrieval/qlora/: audit.json  audit.md
outputs/bench/real_papers_v2/: bench_summary.json  bench_summary.md
outputs/bench/real_papers_v2/dpo/: audit.json  audit.md
outputs/bench/real_papers_v3/: bench_summary.json  bench_summary.md
research_copilot/: __init__.py  __main__.py  audit.py  cli.py  config.py  extractors.py  llm.py  repo_inspector.py  schemas.py  workflow.py  writers.py
research_copilot/eval/: __init__.py  bench.py  rubric.py
research_copilot/extract/: __init__.py  claims.py  missing.py  repo.py
research_copilot/ingest/: __init__.py  huggingface.py  openreview.py  paper.py  repo.py
research_copilot/retrieve/: __init__.py  chunker.py  code_search.py  embedder.py
scripts/: list_models.py
(+10 files in other folders)
