[project]
name = "research-workflow-copilot"
version = "0.2.0"
description = "Reproducibility audit copilot: turns papers + repos into evidence-grounded reproduction plans."
requires-python = ">=3.10"
dependencies = [
    "openai>=1.50.0",
    "pydantic>=2.7",
    "pdfplumber>=0.11",
    "arxiv>=2.1",
    "tenacity>=8.2",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "httpx>=0.27",
]

[project.scripts]
research-copilot = "research_copilot.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["research_copilot*"]
